[package]
name = "spanner-rs"
version = "0.1.0"
edition = "2021"
description = "Cloud Spanner Rust Client"
license = "MIT"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
keywords = ["database", "spanner", "gcp", "sql", "async"]
categories = ["database"]

[features]
# This is only used for testing. Not sure how to make it "private"
gcp = []

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bb8 = "0.7"
# TODO: put this behind a feature flag
bigdecimal = "0.3"
derive_builder = "0.10"
dyn-clone = "1.0"
gcp_auth = "0.5"
http = "0.2"
prost = "0.8"
prost-types = "0.8"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
tonic = { version = "0.5", features = ["tls", "tls-roots"] }
tonic-types = "0.3"
tower = { version = "0.4", features = ["filter"] }

[dev-dependencies]
async-trait = "0.1"
ctor = "0.1"
dotenv = "0.15"
env_logger = "0.9.0"
testcontainers = "0.12"
reqwest = "0.11"

[build-dependencies]
tonic-build = "0.5"

[lib]
doctest = false # TODO: move generated code to another crate to only disable this in that crate.
