[package]
name = "spanner-rs"
version = "0.1.2-alpha.0"
edition = "2021"
description = "Cloud Spanner Rust Client"
license = "MIT"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
repository = "https://github.com/plaflamme/spanner-rs/"
keywords = ["database", "spanner", "gcp", "sql", "async"]
categories = ["database"]

[features]
numeric = ["bigdecimal"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bb8 = "0.7"
bigdecimal = { version = "0.3", optional = true }
derive_builder = "0.10"
dyn-clone = "1.0"
gcp_auth = "0.5"
googapis = { version = "0.5", features = ["google-spanner-v1"] }
http = "0.2"
prost = "0.8"
prost-types = "0.8"
thiserror = "1.0"
tokio = { version = "1.12", features = ["rt-multi-thread", "macros", "net"] }
tonic = { version = "0.5", features = ["tls", "tls-roots"] }
tonic-types = "0.3"
tower = { version = "0.4", features = ["filter"] }

[dev-dependencies]
async-trait = "0.1"
ctor = "0.1"
dotenv = "0.15"
env_logger = "0.9.0"
testcontainers = "0.12"
reqwest = "0.11"

[package.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "chore: release {{version}}"
post-release-commit-message = "chore: prepare {{version}}"
tag-message = "chore: release {{version}}"
