[package]
name = "spanner-rs"
version = "0.2.1-alpha.0"
edition = "2021"
description = "Cloud Spanner Rust Client"
license = "MIT"
authors = ["Philippe Laflamme <philippe.laflamme@gmail.com>"]
repository = "https://github.com/plaflamme/spanner-rs/"
keywords = ["database", "spanner", "gcp", "sql", "async"]
categories = ["database"]

[features]
default = ["json", "numeric", "temporal"]
json = ["serde_json"]
numeric = ["bigdecimal"]
temporal = ["chrono"]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bb8 = "0.8"
bigdecimal = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true }
derive_builder = "0.10"
dyn-clone = "1.0"
gcp_auth = "0.6"
googapis = { version = "0.6", features = ["google-spanner-v1"] }
http = "0.2"
prost = "0.9"
prost-types = "0.9"
serde_json = { version = "1.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.16", features = ["rt-multi-thread", "macros", "net"] }
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
tonic-types = "0.4"
tower = { version = "0.4", features = ["filter"] }

[dev-dependencies]
async-trait = "0.1"
ctor = "0.1"
dotenv = "0.15"
env_logger = "0.9.0"
testcontainers = "0.12"
reqwest = "0.11"

[package.metadata.release]
sign-commit = true
sign-tag = true
tag-message = "chore: release {{version}}"
pre-release-commit-message = "chore: release {{version}}"
post-release-commit-message = "chore: prepare {{next_version}}"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = "\\.\\.\\.HEAD", replace = "...{{tag_name}}", exactly = 1 },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" },
    { file = "CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1 },
    { file = "CHANGELOG.md", search = "<!-- next-url -->", replace = "<!-- next-url -->\n[Unreleased]: https://github.com/plaflamme/spanner-rs/compare/{{tag_name}}...HEAD", exactly = 1 },
]
